# finance-server

./: .env  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  finance-server
.github/workflows/: docker.yml  rust.yml
.sqlx/: query-11f423cd0ec3ebe786eb772acc0d5dd07117bff68db294473a22ff95a61c41db.json  query-132c52f7e751cc19da92040d4ad24c378dd6a0c5735101bd5ab5deab93ee7e98.json  query-27ade766c8e2ed6dd9613365ba96d6341b8846ca9685bf98bd6f28cc7c3e8dc5.json  query-378dc7055cabf5b842c9e33117a9f2ab76252b61d24c0be5fc3dd5401da2efd3.json  query-38899e92082c962328faef3356c5880afdfed8b4cb6173c73010ef6ae845d405.json  query-5b8b72956ff87a3fe4cadf47dd0ce32c6069eeb09c89f41e141eddd2e6ddb06a.json  query-65ee14d905662a6c98c2f643bd2b6e68cd439b835ee163e901aa4826f7e7ea33.json  query-76067bb30a92f196f09943fc22f59117df7b6d539a07f1ef8ee61c50906bec52.json  query-7b3ed73e2687d6737789875bb73bfe180fa58230bec6b4142f31a15a06b33ff9.json  query-7e5cfd7d1af6e64561bc49b225c31b58cb60b12570b7456beaa6f53cbdd13c78.json  query-82f99a42a09716b0e409043a0f9f25106f6d7f6ac772914da58beaadb0bdfc86.json  query-a870886f097fab7e37e951ebe8bb5fa161241fdefcabce4a3abe4b52e59a66ce.json  query-bde6bf815016ba2cd781c845adaa0b2791dc98c66953900c9b8f496745944e47.json  query-de76b3727ed44e0d887b07c1c86dd67df78500f552f496f69ab52482c600891b.json  query-e1bc99706051f9095dffca4970ca4d7365fea75bf8b75dce5071eb8a91c9ba04.json  query-ef1c807969f00c8ff1be3d74346accd46f06fa6715fe2fbc7805568c227d6c3d.json  query-f2d19005c67d959cf205b02bfc87b6546711ccf182aa4e28151407eca37b7dca.json  query-f4f6f80cf82dc4660a1d9c31ee334bcb9c0af17b127be47aa228a6e532785246.json  query-ff2eddceb33f82e99c13785d0c336da6d2cbc4c4e2828d83f8c99539ae61eec6.json
migrations/: 20250312020309_setup.sql
src/: api_bridge.rs  main.rs  models.rs
src/api/: auth_routes.rs  data_routes.rs  mod.rs  user_routes.rs
src/routes/: auth_routes.rs  data_routes.rs  mod.rs
src/utils/: auth.rs  data_processing.rs  encryption.rs  jwt.rs  mod.rs  state.rs  store.rs  user_processing.rs
src/website/: mod.rs
src/website/components/: aa.json  adding_pages.rs  edit_transaction.rs  error.rs  filter.rs  header.rs  mod.rs  navigation.rs  svgs.rs  transaction.rs
src/website/js/: add_single_transaction.js  authorsied_page_header.js  edit_transaction.js  filters.js  items.js  login.js  mod.rs  nav.js  signup.js  submit_transaction.js  table.js  utils.js
src/website/pages/: mod.rs  (+4 more)
(+6 files in other folders)
