[package]
default-run = "ledgerly"
edition = "2021"
name = "ledgerly"
repository = "https://github.com/danielMichaeloudis/ledgerly"
version = "0.4.0"

[dependencies]
aes-gcm = "0.10.3"
async-trait = "0.1.89"
axum = {version = "0.8.6", features = ["macros"]}
base64 = "0.22.1"
chrono = {version = "0.4.42", features = ["serde"]}
css_helper = {path = "./src/website/css_crates/css_helper"}
dotenvy = "0.15.7"
jwt-simple = {version = "0.12.12", default-features = false, features = ["pure-rust"]}
maud = {version = "0.27.0", features = ["axum"]}
password-auth = "1.0.0"
rand = "0.9.2"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
sqlx = {version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono"]}
tokio = {version = "1.47.1", features = ["full"]}
tokio-util = {version = "0.7.16", features = ["io"]}
tower-http = {version = "0.6.6", features = ["cors"]}
url = "2.5.7"

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
strip = true

[dependencies.uuid]
features = [
  "v4", # Lets you generate random UUIDs
  "fast-rng", # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
  "serde",
]
version = "1.18.1"
